[gd_scene load_steps=2 format=3 uid="uid://detivjf1disjb"]

[ext_resource type="Script" uid="uid://ddjh3e6c86rfi" path="res://scenes/system_info/system_info.gd" id="1_7o6fl"]

[node name="SystemInfo" type="Panel"]
anchors_preset = -1
anchor_right = 0.243
anchor_bottom = 0.148
offset_right = 0.0639954
offset_bottom = -0.192001
script = ExtResource("1_7o6fl")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="FpsLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "FPS"

[node name="FpsValue" type="Label" parent="GridContainer"]
layout_mode = 2
text = "FPS"
horizontal_alignment = 2

[node name="StaticMemoryLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Static Memory"

[node name="StaticMemoryValue" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Static Memory"
horizontal_alignment = 2

[node name="StaticMemoryMaxLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Dynamic Memory"

[node name="StaticMemoryMaxValue" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Dynamic Memory"
horizontal_alignment = 2

[node name="ObjectCountLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Object Count"

[node name="ObjectCountValue" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Object Count"
horizontal_alignment = 2

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
